<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>robot_pose_ekf</name>
    <version>1.15.0</version>
    <description>

        The Robot Pose EKF package is used to estimate the 3D pose of a robot, based on (partial) pose measurements coming from different sources. It uses an extended Kalman filter with a 6D model (3D position and 3D orientation) to combine measurements from wheel odometry, IMU sensor and visual odometry. The basic idea is to offer loosely coupled integration with different sensors, where sensor signals are received as ROS messages.

    </description>
    <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>
    <license>BSD</license>
    <url>http://wiki.ros.org/robot_pose_ekf</url>
    <author>Wim Meeussen</author>


    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>builtin_interfaces</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>liborocos-bfl-dev</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>

    <exec_depend>rosidl_default_runtime</exec_depend>

    <test_depend>rosbag</test_depend>
    <test_depend>rostest</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
      </export>
</package>
